--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.3.1",
     "next-seo": "^5.6.0",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "18.2.0",
     "react-tabs": "^5.1.0",
     "rehype-stringify": "^9.0.3",
